feat: better structure

--- a/add-as-non-steam/steam-context-menu.desktop
+++ b/add-as-non-steam/steam-context-menu.desktop
@@ -8,4 +8,4 @@ X-KDE-ServiceTypes=KonqPopupMenu/Plugin
 [Desktop Action addToSteam]
 Name=Add To Steam
 Exec=~/.bin/aans %f
-Icon=folder-add
+Icon=steam
